deploy/aws/k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: antiatropos
  namespace: antiatropos
  labels:
    app: antiatropos
  annotations:
    # Required for AWS Load Balancer Controller to create an NLB
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  type: LoadBalancer
  selector:
    app: antiatropos
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
